# rooster

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
cmake/modules/: AddRooster.cmake
cxx/: ASTMacroHelpers.h  CMakeLists.txt  Rooster.cpp
cxx/core/: CMakeLists.txt  Ngram.h  NgramCollector.h
cxx/core/ast/: ASTAction.h  ASTExprTraits.h  CMakeLists.txt  FileAction.h  PlainPrinter.cpp  PlainPrinter.h  StatisticsCollector.cpp
cxx/support/: CMakeLists.txt  CommandLineOptions.cpp  CommandLineOptions.h
include/completion/: CompletionPrinter.h  CompletionTool.h
include/core/: NgramCollector.h
include/core/ast/: ASTAction.h  StatisticsCollector.h
include/support/: CommandLineOptions.h  ConsoleInputProvider.h  ConsoleInputReader.h  InputProvider.h  InputReader.h  InteractiveMode.h  InteractiveModeException.h  JSONInputReader.h  StringExtras.h
lib/: CMakeLists.txt
lib/completion/: CMakeLists.txt  CompletionPrinter.cpp  CompletionTool.cpp
lib/core/ast/: CMakeLists.txt  PlainPrinter.cpp  StatisticsCollector.cpp
lib/entry/: CMakeLists.txt  Rooster.cpp
lib/support/: CMakeLists.txt  CommandLineOptions.cpp  ConsoleInputProvider.cpp  InteractiveMode.cpp  InteractiveModeException.cpp  JSONInputReader.cpp
python/: requirements.txt  rooster.py
scripts/travis/: build.sh  configure.sh  install-deps.sh
unittests/: CMakeLists.txt
unittests/support/: CMakeLists.txt  InteractiveModeTest.cpp  JSONInputReaderTest.cpp
utils/unittests/: CMakeLists.txt
utils/unittests/UnitTestMain/: CMakeLists.txt  TestMain.cpp
